finish phase 4